[tool.poetry]
name = "fastapi-responses"
version = "0.2.1"
description = "Extend OpenAPI schema to collect HTTPExceptions."
authors = ["Marcelo Trylesinski <marcelotryle@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/GeneralFlint/fastapi-responses"

classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.8.0"
fastapi = ">=0.62.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
black = "^24.3.0"
flake8 = "^5.0.4"
autoflake = "^1.4"
isort = "^5.13"
pytest-cov = "^4.1.0"
pre-commit = "^3.5.0"
mypy = "^1.7.1"
requests = "^2.32.3"
httpx = "^0.28.0"

[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"
